--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,9 @@ button {
 }
 
 #histories {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
   flex-wrap: wrap;
   justify-content: space-around;
 }
@@ -151,7 +153,7 @@ button {
   width: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
+  display: grid;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -188,5 +190,9 @@ button {
   }
   .card {
     flex-direction: column;
+  }
+  #histories{
+   display: flex;
+   flex-direction: row;
   }
 }
